refactor: S3 연동 및 Post 도메인 로직 리팩토링